--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 @import "components/pool";
 @import "components/score";
 @import "components/add-button";
+@import "components/back-button";
 
 body {
   background-color: #19194B;
@@ -22,4 +23,9 @@ body {
   h1, h2, h3 {
     color: white;
   }
+}
+
+.blue-text {
+  color: #2D3DFF;
+  font-weight: bold;
 }
