--- a/app/assets/stylesheets/bets/show.scss
+++ b/app/assets/stylesheets/bets/show.scss
@@ -1,14 +1,53 @@
+.bet-card-new {
+  background-color: white;
+  padding-top: 40px;
+  border: 0.1rem solid #dddde4;
+  border-radius: 1.6rem;
+  padding: 1.8rem 1.6rem;
+  box-shadow: 0 0.4rem 0 #dddde4, 0 -0.4rem 0 #dddde4;
+
+  h2, p{
+  color: black;
+  font-family: 'Ubuntu', sans-serif;
+}
+}
+
 input#bet_difference {
   width: 30%;
 }
 
-.label {
-  color: black;
-  font-family: 'Ubuntu', sans-serif;;
+.bet-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3em;
+  font-family: 'Ubuntu', sans-serif;
+  .input {
+    border-radius: 2em;
+    margin-left: 1em;
+    text-align: center;
+  }
+  .selected {
+    filter: drop-shadow(0 0 12px #2D3DFF);
+  }
 }
 
-.input {
-  border-radius: 2em;
-  margin-left: 1em;
-  text-align: center;
+.hidden-radio{
+  display: none;
+}
+
+.btn {
+  border: 0.1rem solid #dddde4;
+  border-radius: 2rem;
+  padding: 0.6rem 0.9rem;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  margin-top: 2em;
+  font-family: 'Ubuntu', sans-serif;
+
+  &:hover{
+    color: white;
+    background-color: #2D3DFF;
+  }
 }
